--- a/wiki/de/Cables_CableBox.html
+++ b/wiki/de/Cables_CableBox.html
@@ -115,8 +115,8 @@
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Material</b><span style="font-size:80%;"> (<code>Link</code>)</span>: Hier kann ein <a href="../de/Arch_SetMaterial.html" title="Arch SetMaterial/de">Material</a> oder ein <a href="../de/Arch_MultiMaterial.html" title="Arch MultiMaterial/de">Mehrfachmaterial</a> zugeordnet werden. Das spezielle Mehrfachmaterial <code>boxMultiMat2m</code> steht im <a href="../de/Cables_Material.html" title="Cables Material/de">Cables-Material</a> zur Verf&uuml;gung. Es kann eingesetzt werden, wenn in dem Cable-Box-Objekt DIN-Schienen bereitgestellt werden.</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Cable Box</span>
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Box Body Hidden</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn auf <code>true</code> gesetzt, wird die Form der Installationsdose ausgeblendet, damit die Leitungen innerhalb der Installationsdose (mit Hilfe der Hilfsringe) leichter bearbeitet werden k&ouml;nnen. Diese Eigenschaft sollte auf <code>false</code> gesetzt werden, wenn das Bearbeiten abgeschlossen ist, oder nicht ben&ouml;tigt wird.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Claim Children</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn auf <code>true</code> gesetzt, werden die verkn&uuml;pften Anschl&uuml;sse und Anschlusskreuze in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> als untergeordnete Elemente aufgef&uuml;hrt (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Depth</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Legt die die Innere Tiefe der Installationsdose fest. Der Standardwert ist 74 mm. Steht zur Verf&uuml;gung, wenn die Eigenschaft <b>Profile Type</b> auf <code>Rectangle</code> gesetzt ist.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Diameter</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Legt den den Innendurchmesser der Installationsdose fest. Der Standardwert ist 60 mm. Steht zur Verf&uuml;gung, wenn die Eigenschaft <b>Profile Type</b> auf <code> Circle</code> gesetzt ist.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Din Rails</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn auf <code>true</code> gesetzt, wird die <a rel="nofollow" class="external text" href="https://de.wikipedia.org/wiki/Tragschiene">DIN-Schiene</a> entsprechend der Form und den Abma&szlig;en der Installationsdose automatisch zum K&ouml;rper der Installationsdose hinzugef&uuml;gt. Die Schiene wird 50 mm unterhalb der Oberseite der Dose positioniert und der Abstand zwischen den Schienen ist auf 125 mm festgelegt. Die Installationsdose muss gro&szlig; genug sein, um die Automatische Erstellung von DIN-Schienen zu erm&ouml;glichen. Der Standardwert ist <code>true</code>. Wird nur erstellt, wenn die Eigenschaft <b>Profile Type</b> auf <code>Rectangle</code> gesetzt ist.</li>
@@ -127,9 +127,9 @@
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Number Of Supp Lines</b><span style="font-size:80%;"> (<code>Integer</code>)</span>: (standardm&auml;&szlig;ig ausgeblendet) Legt die Anzahl der untergeordneten SuppLines-Objekte fest. Der Standardwert ist 1.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Preset</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>: Legt den vorgefertigten Parametersatz f&uuml;r die Installationsdose fest. Die Standardeinstellung ist <code>1G_FlushMnt_Round_D60_h62</code>.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Profile Type</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>: Legt die Grundform der Installationsdose fest. Vorhandene Werte: <code>Circle</code>, <code>Rectangle</code>. Einige andere Eigenschaften h&auml;ngen von dieser ab und werden eingeblendet, wenn erforderlich.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Shape Reference Plane</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>: Die Referenzebene f&uuml;r die Form der Installationsdose. Sie &auml;ndert nur die interne Referenz, ohne die Eigenschaft Placement der Installationsdose zu beeinflussen (<span style="color:blue;">introduced in version 0.3.3</span>).</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Thickness</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Legt die Wandst&auml;rke der Installationsdose fest. Der Standardwert ist 2 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Width</b><span style="font-size:80%;"> (<code>Length</code>)</span>: legt die Innenweite der Installationsdose fest. Der Standardwert ist 74 mm. Steht zur Verf&uuml;gung, wenn die Eigenschaft <b>Profile Type</b> auf <code>Rectangle</code> gesetzt ist.</li></ul>
-</div>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Cable Box Helpers</span>
 </p>
 <div class="mw-translate-fuzzy">
@@ -173,15 +173,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118194740
+Cached time: 20260119001349
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.097 seconds
-Real time usage: 0.273 seconds
-Preprocessor visited node count: 1439/1000000
-Post&#8208;expand include size: 21950/2097152 bytes
-Template argument size: 5496/2097152 bytes
+CPU time usage: 0.091 seconds
+Real time usage: 0.252 seconds
+Preprocessor visited node count: 1488/1000000
+Post&#8208;expand include size: 22834/2097152 bytes
+Template argument size: 5660/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 3/100
 Unstrip recursion depth: 0/20
@@ -189,19 +189,19 @@ Unstrip post&#8208;expand size: 1355/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   84.397      1 -total
- 26.12%   22.046     25 Template:PropertyData/de
- 18.16%   15.324     25 Template:Variable
- 14.21%   11.989     24 Template:Value
- 13.79%   11.640      1 Template:GuiCommand/de
-  8.76%    7.394      3 Template:TitleProperty
-  6.87%    5.799     45 Template:Incode
-  6.49%    5.480      2 Template:Docnav/de
-  6.35%    5.362      3 Template:Caption
-  5.58%    4.707      6 Template:KEY
+100.00%  173.587      1 -total
+ 75.86%  131.684      2 Template:Code
+  6.27%   10.892     27 Template:PropertyData/de
+  4.21%    7.305     27 Template:Variable
+  3.32%    5.758      3 Template:TitleProperty
+  2.72%    4.720     20 Template:Value
+  2.38%    4.132      1 Template:GuiCommand/de
+  1.86%    3.223      2 Template:Docnav/de
+  1.78%    3.098     43 Template:Incode
+  1.26%    2.181      4 Template:TRUE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374307-0!canonical and timestamp 20260118194739 and revision id 1740804. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374307-0!canonical and timestamp 20260119001349 and revision id 1740871. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
