--- a/wiki/de/Cables_CableBox.html
+++ b/wiki/de/Cables_CableBox.html
@@ -132,13 +132,11 @@
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Width</b><span style="font-size:80%;"> (<code>Length</code>)</span>: legt die Innenweite der Installationsdose fest. Der Standardwert ist 74 mm. Steht zur Verf&uuml;gung, wenn die Eigenschaft <b>Profile Type</b> auf <code>Rectangle</code> gesetzt ist.</li></ul>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Cable Box Helpers</span>
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Helper Rings Hidden</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn auf <code>false</code> gesetzt, werden Hilfsringe eingeblendet. Der Standardwert ist <code>true</code>. Hilfsringe sind dazu da, um Leitungen innerhalb einer Installationsdose leichter bearbeiten zu k&ouml;nnen. Knoten des Hilfsrings dienen als tempor&auml;re Einrastpunkte f&uuml;r Adern, wenn Adern mit <a href="../de/Cables_Edit.html" title="Cables Edit/de">Cables Bearbeiten</a> bearbeitet werden. Diese Eigenschaft kann auf <code>true</code> gesetzt werden, wenn das Bearbeiten abgeschlossen ist, oder nicht ben&ouml;tigt wird.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Ring 1 Diameter</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Der Durchmesser des ersten Hilfsrings. Der Standardwert ist 45 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Ring 1 Height</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Die H&ouml;he des ersten Hilfsrings unterhalb des Deckels der Installationsdose (oben offene Kante der Dose). Der Standardwert ist 40 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Ring 2 Diameter</b><span style="font-size:80%;"> (<code>Length</code>)</span>: Der Durchmesser des zweiten Hilfsrings. Der Standardwert ist 30 mm.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Ring 2 Height</b><span style="font-size:80%;"> (<code>Length</code>)</span>: die H&ouml;he des zweiten Hilfsrings unterhalb des Deckels der Installationsdose (oben offene Kante der Dose). Der Standardwert ist 20 mm.</li></ul>
-</div>
 <p><span id="Typical_workflow"></span>
 </p>
 <h2><span class="mw-headline" id="Typischer_Arbeitsablauf">Typischer Arbeitsablauf</span></h2>
@@ -173,15 +171,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260119001349
+Cached time: 20260119001549
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
-Real time usage: 0.252 seconds
-Preprocessor visited node count: 1488/1000000
-Post&#8208;expand include size: 22834/2097152 bytes
-Template argument size: 5660/2097152 bytes
+CPU time usage: 0.096 seconds
+Real time usage: 0.126 seconds
+Preprocessor visited node count: 1466/1000000
+Post&#8208;expand include size: 22782/2097152 bytes
+Template argument size: 5634/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 3/100
 Unstrip recursion depth: 0/20
@@ -189,19 +187,19 @@ Unstrip post&#8208;expand size: 1355/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  173.587      1 -total
- 75.86%  131.684      2 Template:Code
-  6.27%   10.892     27 Template:PropertyData/de
-  4.21%    7.305     27 Template:Variable
-  3.32%    5.758      3 Template:TitleProperty
-  2.72%    4.720     20 Template:Value
-  2.38%    4.132      1 Template:GuiCommand/de
-  1.86%    3.223      2 Template:Docnav/de
-  1.78%    3.098     43 Template:Incode
-  1.26%    2.181      4 Template:TRUE
+100.00%   49.484      1 -total
+ 23.73%   11.742     27 Template:PropertyData/de
+ 14.95%    7.400     27 Template:Variable
+ 11.10%    5.494      3 Template:TitleProperty
+  9.88%    4.890      1 Template:GuiCommand/de
+  8.99%    4.449     17 Template:Value
+  8.88%    4.396      2 Template:Code
+  7.44%    3.681      2 Template:Docnav/de
+  5.43%    2.686      3 Template:FileName
+  5.04%    2.493     40 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374307-0!canonical and timestamp 20260119001349 and revision id 1740871. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:374307-0!canonical and timestamp 20260119001549 and revision id 1740873. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
