--- a/wiki/de/Cables_CableConduit.html
+++ b/wiki/de/Cables_CableConduit.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables CableConduit/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Cables+CableConduit&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Cables_CableConduit.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Cables CableConduit (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Cables_CableConduit.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Gaine (96% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <div class="docnav">
@@ -92,12 +92,10 @@ oder <a href="../de/Cables_CompoundPath.html" title="Cables CompoundPath/de">Cab
 <p>F&uuml;r die anderen Eigenschaften in dieser Gruppe siehe <a href="../de/Arch_Component.html#Eigenschaften" title="Arch Component/de">Arch Komponente</a>.
 </p><p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Conduit</span>
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Auto Label Base</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn auf <code>true</code> gesetzt, wird der Name des Basislinienzuges automatisch umbenannt. Um den Namen zu aktualisieren, sollte die Eigenschaft auf <code>false</code> und wieder auf <code>true</code> gesetzt werden.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Merge Sub Conduits</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Wenn auf <code>true</code> gesetzt, werden alle Objekte der Eigenschaft <b>Sub Conduits</b> in der endg&uuml;ltigen Form zusammengefasst. Zuerst wird ein <a href="../de/Part_Compound.html" title="Part Compound/de">Part Verbund</a> erstellt, der untergeordnete Leitungsf&uuml;hrungen enth&auml;lt, dann wird dieser mit der Form der eigentlichen <b>Leitungsf&uuml;hrung</b> zur endg&uuml;ltigen Form zusammengef&uuml;gt.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Show Sub Conduits</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: Blendet alle untergeordneten Leitungsf&uuml;hrungen ein bzw. aus. Dies funktioniert nur, wenn <b>Merge Sub Conduits</b> auf <code>true</code> gesetzt ist.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Sub Conduits</b><span style="font-size:80%;"> (<code>Link List</code>)</span>: Liste der Leitungsf&uuml;hrungen oder Leitungen, die zum B&uuml;ndel geh&ouml;ren.</li></ul>
-</div>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Conduit Dimensions</span>
 </p>
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Gauge</b><span style="font-size:80%;"> (<code>Float</code>)</span>: Au&szlig;enabmessung der Leitungsf&uuml;hrung in mm&sup2;. Sie h&auml;ngt mit Ma&szlig;eigenschaften zusammen: <b>Diameter</b> (Durchmesser), <b>Width</b> (Breite) und <b>Height</b> (H&ouml;he) h&auml;ngen von der Eigenschaft <b>Profile Type</b> ab.</li>
@@ -115,35 +113,35 @@ oder <a href="../de/Cables_CompoundPath.html" title="Cables CompoundPath/de">Cab
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118194755
+Cached time: 20260119001959
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.066 seconds
-Real time usage: 0.103 seconds
-Preprocessor visited node count: 518/1000000
-Post&#8208;expand include size: 11243/2097152 bytes
-Template argument size: 3262/2097152 bytes
+CPU time usage: 0.087 seconds
+Real time usage: 0.433 seconds
+Preprocessor visited node count: 484/1000000
+Post&#8208;expand include size: 11157/2097152 bytes
+Template argument size: 3220/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 842/5000000 bytes
+Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.814      1 -total
- 22.36%    8.009      7 Template:PropertyData/de
- 19.06%    6.827      1 Template:GuiCommand/de
- 13.79%    4.939      2 Template:Docnav/de
- 12.45%    4.458      7 Template:Variable
- 11.07%    3.965      1 Template:Button
- 10.75%    3.850      4 Template:TitleProperty
-  6.50%    2.328      2 Template:MenuCommand
-  5.47%    1.960      2 Template:Caption
-  4.86%    1.740     12 Template:Incode
+100.00%  133.267      1 -total
+ 25.82%   34.404      7 Template:PropertyData/de
+ 18.96%   25.268      7 Template:Variable
+ 14.32%   19.081      4 Template:TitleProperty
+ 12.30%   16.394      7 Template:Incode
+ 11.46%   15.272      1 Template:GuiCommand/de
+ 10.41%   13.877      4 Template:TRUE
+  8.67%   11.551      1 Template:Button
+  7.75%   10.324      2 Template:MenuCommand
+  6.23%    8.301      2 Template:Docnav/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:383010-0!canonical and timestamp 20260118194754 and revision id 1740811. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:383010-0!canonical and timestamp 20260119001959 and revision id 1740877. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
