--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -131,16 +131,13 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <h3><span class="mw-headline" id="Abschnitt_1:_Dokument">Abschnitt 1: Dokument</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Document_00.png&amp;filetimestamp=20221021104502&amp;.html" class="mw-file-description" title="FCInfo Dokument"><img alt="FCInfo Dokument" src="../File/Macro_FCInfo_Document_00.png" decoding="async" width="397" height="154" class="mw-file-element" data-file-width="397" data-file-height="154"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li>Dokumentname</li>
 <li>Benenung und interner Name des Objekts</li>
 <li>Interner Name des Objekts</li>
 <li>Unterelementname und Art des Objekts</li>
 <li>Art des Objekts</li></ul>
 <p><i>(Die Variable <b>switch_setVisible_GBox_001_Document</b> kann auf <code>false</code> gesetzt werden, um die Tafel auszublenden)</i>
-</p>
-</div>
-<p><span id="Sector_2:_Coordinates_click_mouse"></span>
+</p><p><span id="Sector_2:_Coordinates_click_mouse"></span>
 </p>
 <h3><span class="mw-headline" id="Abschnitt_2:_Mausklick-Koordinaten">Abschnitt 2: Mausklick-Koordinaten</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Coordinate_click_mouse_00.png&amp;filetimestamp=20221021104434&amp;.html" class="mw-file-description" title="FCInfo Koordinate"><img alt="FCInfo Koordinate" src="../File/Macro_FCInfo_Coordinate_click_mouse_00.png" decoding="async" width="397" height="94" class="mw-file-element" data-file-width="397" data-file-height="94"></a></span>
@@ -748,13 +745,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118193049
+Cached time: 20260119002436
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.240 seconds
-Real time usage: 1.301 seconds
-Preprocessor visited node count: 1552/1000000
+CPU time usage: 0.329 seconds
+Real time usage: 3.384 seconds
+Preprocessor visited node count: 1551/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5251/2097152 bytes
 Highest expansion depth: 6/100
@@ -764,19 +761,19 @@ Unstrip post&#8208;expand size: 15820/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  333.393      1 -total
- 19.12%   63.729     10 Template:Code
-  8.76%   29.192      8 Template:RadioButton
-  5.13%   17.116      5 Template:SpinBox
-  4.21%   14.036      1 Template:CodeDownload
-  4.09%   13.625      1 Template:Caption
-  3.53%   11.769      1 Template:Codeextralink
-  3.25%   10.826      4 Template:ComboBox
-  3.16%   10.522     10 Template:CheckBox
-  2.99%    9.979     44 Template:LineEdit
+100.00% 2270.890      1 -total
+ 87.94% 1997.099     10 Template:Code
+  0.81%   18.314     25 Template:Button
+  0.53%   12.122      1 Template:Macro/de
+  0.45%   10.117      8 Template:RadioButton
+  0.40%    9.084      5 Template:Clear
+  0.40%    9.043     44 Template:LineEdit
+  0.34%    7.731     10 Template:CheckBox
+  0.34%    7.638      1 Template:Codeextralink
+  0.30%    6.804     19 Template:True
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260118193047 and revision id 1740773. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119002432 and revision id 1740879. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
