--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -142,13 +142,10 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <h3><span class="mw-headline" id="Abschnitt_2:_Mausklick-Koordinaten">Abschnitt 2: Mausklick-Koordinaten</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Coordinate_click_mouse_00.png&amp;filetimestamp=20221021104434&amp;.html" class="mw-file-description" title="FCInfo Koordinate"><img alt="FCInfo Koordinate" src="../File/Macro_FCInfo_Coordinate_click_mouse_00.png" decoding="async" width="397" height="94" class="mw-file-element" data-file-width="397" data-file-height="94"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
-<ul><li>Die X-,Y- und Z-Koordinaten des Mausklicks</li>
-<li>Die <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Schaltfl&auml;che</span> erstellt Punkt, Achse, Ebene, Kopie des Achsenvektors von <b>FreeCAD.Vector(-24.0, 240.0, 7.0)</b></li></ul>
+<ul><li>Die X-, Y- und Z-Koordinaten des Mausklicks</li>
+<li>Die <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Schaltfl&auml;che</span> erstellt Punkt, Achse, Ebene, Kopien des Achsenvektors von <b>FreeCAD.Vector(-24.0, 240.0, 7.0)</b></li></ul>
 <p><i>(Die Variable <b>switch_setVisible_GBox_002_Coordinate_Mouse</b> kann auf <code>false</code> gesetzt werden, um die Tafel auszublenden)</i>
-</p>
-</div>
-<p><span id="Sector_3:_Color_on_point"></span>
+</p><p><span id="Sector_3:_Color_on_point"></span>
 </p>
 <h3><span class="mw-headline" id="Abschnitt_3:_Color_on_point">Abschnitt 3: Color on point</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Color_on_point_00.png&amp;filetimestamp=20221021104407&amp;.html" class="mw-file-description" title="FCInfo Color_on_point"><img alt="FCInfo Color_on_point" src="../File/Macro_FCInfo_Color_on_point_00.png" decoding="async" width="397" height="147" class="mw-file-element" data-file-width="397" data-file-height="147"></a></span>
@@ -745,13 +742,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119002436
+Cached time: 20260119002612
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.329 seconds
-Real time usage: 3.384 seconds
-Preprocessor visited node count: 1551/1000000
+CPU time usage: 0.235 seconds
+Real time usage: 1.809 seconds
+Preprocessor visited node count: 1550/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5251/2097152 bytes
 Highest expansion depth: 6/100
@@ -761,19 +758,19 @@ Unstrip post&#8208;expand size: 15820/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00% 2270.890      1 -total
- 87.94% 1997.099     10 Template:Code
-  0.81%   18.314     25 Template:Button
-  0.53%   12.122      1 Template:Macro/de
-  0.45%   10.117      8 Template:RadioButton
-  0.40%    9.084      5 Template:Clear
-  0.40%    9.043     44 Template:LineEdit
-  0.34%    7.731     10 Template:CheckBox
-  0.34%    7.638      1 Template:Codeextralink
-  0.30%    6.804     19 Template:True
+100.00% 1048.058      1 -total
+ 79.51%  833.273     10 Template:Code
+  1.82%   19.092      8 Template:RadioButton
+  1.03%   10.768      5 Template:SpinBox
+  1.00%   10.531     25 Template:Button
+  0.99%   10.365      1 Template:CodeDownload
+  0.78%    8.128      4 Template:ComboBox
+  0.72%    7.569      1 Template:Macro/de
+  0.57%    5.958      1 Template:Codeextralink
+  0.54%    5.661     10 Template:CheckBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119002432 and revision id 1740879. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119002610 and revision id 1740881. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
