--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -150,7 +150,6 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <h3><span class="mw-headline" id="Abschnitt_3:_Color_on_point">Abschnitt 3: Color on point</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Color_on_point_00.png&amp;filetimestamp=20221021104407&amp;.html" class="mw-file-description" title="FCInfo Color_on_point"><img alt="FCInfo Color_on_point" src="../File/Macro_FCInfo_Color_on_point_00.png" decoding="async" width="397" height="147" class="mw-file-element" data-file-width="397" data-file-height="147"></a></span>
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li>Farbe am ausgew&auml;hlten Punkt.
 <ul><li>Wertebereich jeweils 0.0 bis 1.0</li></ul></li>
 <li>Die n&auml;chste Zeile zeigt die Werte der Farbe in unterschiedlichen Formaten an: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">"3435973887" , "#cccccc" , "0xcccccc" , "204,204,204" , "(0.8,0.8,0.8)"</span>
@@ -163,11 +162,9 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Sub.Objet<span></span></span>&nbsp;: &Auml;ndert die Farbe des ausgew&auml;hlten Objekts oder Teilobjekts. Wenn aktiviert <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxTrue.svg&amp;filetimestamp=20200323161507&amp;.html" class="mw-file-description"><img src="../File/CheckBoxTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Sub.Objet<span></span></span>, wird die ausgew&auml;hlte Fl&auml;che bzw. das ausgew&auml;hlte Teilobjekt ge&auml;ndert oder dupliziert. Wenn deaktiviert (standard), wird das Objekt ge&auml;ndert (Farbe) oder dupliziert.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Coul. Obj</span>&nbsp;: &Auml;ndert die Farbe der Form bzw. der Fl&auml;che, abh&auml;ngig von der Auswahl. Im Falle von Netz- oder Punktobjekten wird das ganze Objekt eingef&auml;rbt.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Dupl. Obj</span>&nbsp;: Dupliziert die Fl&auml;che bzw. das Objekt, abh&auml;ngig von der ausgew&auml;hlten Option. Im Falle von Netz- oder Punktobjekten wird das ganze Objekt eingef&auml;rbt. Beim Duplizieren eines Netzobjekts bleibt das Original erhalten und es wird eine Festk&ouml;rperform erstellt. Duplizieren eines Punktobjekts erh&auml;lt das original und erstellt eine Kopie.</li>
-<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>&nbsp;: Transparenzgrad der ausgew&auml;hlten Fl&auml;che bzw. des ausgew&auml;hlten Objekts, abh&auml;ngig von der ausgew&auml;hlten Option <b>0 = opak</b> , <b>100 = transparent</b></li></ul>
+<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>&nbsp;: Der Transparenzgrad der ausgew&auml;hlten Fl&auml;che bzw. des ausgew&auml;hlten Objekts h&auml;ngt von der ausgew&auml;hlten Option ab, <b>0 = opak</b> , <b>100 = transparent</b></li></ul>
 <p><i>(Die Variable <b>switch_setVisible_GBox_003_Color</b> kann auf <code>false</code> gesetzt werden, um die Tafel auszublenden)</i>
-</p>
-</div>
-<p><span id="Sector_4:_Components_Mesh"></span>
+</p><p><span id="Sector_4:_Components_Mesh"></span>
 </p>
 <h3><span class="mw-headline" id="Abschnitt_4:_Netz-Komponenten">Abschnitt 4: Netz-Komponenten</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Componant_Mesh_v_1-28.png&amp;filetimestamp=20230901213803&amp;.html" class="mw-file-description" title="FCInfo Netz-Komponenten"><img alt="FCInfo Netz-Komponenten" src="../File/Componant_Mesh_v_1-28.png" decoding="async" width="464" height="96" class="mw-file-element" data-file-width="464" data-file-height="96"></a></span>
@@ -742,13 +739,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119002612
+Cached time: 20260119002847
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.235 seconds
-Real time usage: 1.809 seconds
-Preprocessor visited node count: 1550/1000000
+CPU time usage: 0.213 seconds
+Real time usage: 0.317 seconds
+Preprocessor visited node count: 1549/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5251/2097152 bytes
 Highest expansion depth: 6/100
@@ -758,19 +755,19 @@ Unstrip post&#8208;expand size: 15820/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00% 1048.058      1 -total
- 79.51%  833.273     10 Template:Code
-  1.82%   19.092      8 Template:RadioButton
-  1.03%   10.768      5 Template:SpinBox
-  1.00%   10.531     25 Template:Button
-  0.99%   10.365      1 Template:CodeDownload
-  0.78%    8.128      4 Template:ComboBox
-  0.72%    7.569      1 Template:Macro/de
-  0.57%    5.958      1 Template:Codeextralink
-  0.54%    5.661     10 Template:CheckBox
+100.00%   90.382      1 -total
+  6.75%    6.105     10 Template:CheckBox
+  6.18%    5.588     30 Template:False
+  5.85%    5.286     10 Template:Code
+  5.61%    5.074      8 Template:RadioButton
+  5.48%    4.957      1 Template:Codeextralink
+  5.14%    4.647      1 Template:Macro/de
+  5.00%    4.522     44 Template:LineEdit
+  4.78%    4.324     25 Template:Button
+  3.73%    3.371      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119002610 and revision id 1740881. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119002846 and revision id 1740883. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
